# compute-okuboweiss-field

./: .gitignore  pyproject.toml  readme.md
notebooks/: notebook.ipynb
src/: config.py  functions.py  plot.py
tests/: test_properties.py
