[project]
name = "compute-okuboweiss-field"
version = "1.0.0"
description = "Computes and visualizes the Okubo-Weiss field for a randomly generated stream function."
readme = "readme.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
authors = [
  {email = "calvin.bakker@proton.me"},
  {name = "Calvin Casper Bakker"}
]

dependencies = [
"numpy",
"scipy",
"matplotlib",
"cmasher"
]

